--- a/CaietCantari/package.json
+++ b/CaietCantari/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
+    "@fullstackcraft/react-native-keyboard-shift": "^1.1.5-alpha0",
     "expo": "~48.0.9",
     "expo-constants": "~14.2.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-devtools": "^4.27.4",
+    "react-devtools-core": "^4.27.4",
     "react-dom": "18.2.0",
-    "react-native": "0.71.4",
+    "react-native": "0.71.6",
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
