--- a/CaietCantari/package.json
+++ b/CaietCantari/package.json
@@ -19,7 +19,8 @@
     "react-devtools-core": "^4.27.4",
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "@react-native-async-storage/async-storage": "1.17.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
