Changed to fit with the new json file

--- a/CaietCantari/app.json
+++ b/CaietCantari/app.json
@@ -11,9 +11,12 @@
       "resizeMode": "contain",
       "backgroundColor": "#000000"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.biskyy.CaietCantari"
     },
     "android": {
       "adaptiveIcon": {
