--- a/CaietCantari/app.json
+++ b/CaietCantari/app.json
@@ -33,6 +33,12 @@
       "eas": {
         "projectId": "d9ccfd41-f97f-4af9-8bb6-d691b49b63ac"
       }
+    },
+    "runtimeVersion": {
+      "policy": "sdkVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/d9ccfd41-f97f-4af9-8bb6-d691b49b63ac"
     }
   }
 }
