--- a/CaietCantari/package.json
+++ b/CaietCantari/package.json
@@ -20,7 +20,8 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
     "react-native-web": "~0.18.10",
-    "@react-native-async-storage/async-storage": "1.17.11"
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "expo-updates": "~0.16.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
