--- a/CaietCantari/package.json
+++ b/CaietCantari/package.json
@@ -11,17 +11,21 @@
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
     "@fullstackcraft/react-native-keyboard-shift": "^1.1.5-alpha0",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.9",
     "expo-constants": "~14.2.1",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "react": "18.2.0",
     "react-devtools": "^4.27.4",
     "react-devtools-core": "^4.27.4",
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
-    "react-native-web": "~0.18.10",
-    "@react-native-async-storage/async-storage": "1.17.11",
-    "expo-updates": "~0.16.4"
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
