--- a/CaietCantari/package.json
+++ b/CaietCantari/package.json
@@ -18,6 +18,7 @@
     "expo-constants": "~14.2.1",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
+    "jotai": "^2.0.4",
     "react": "18.2.0",
     "react-devtools": "^4.27.4",
     "react-devtools-core": "^4.27.4",
