--- a/CaietCantari/package.json
+++ b/CaietCantari/package.json
@@ -12,6 +12,7 @@
     "@expo/webpack-config": "^18.0.1",
     "@fullstackcraft/react-native-keyboard-shift": "^1.1.5-alpha0",
     "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.9",
@@ -26,7 +27,9 @@
     "react-native": "0.71.6",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
