--- a/CaietCantari/package.json
+++ b/CaietCantari/package.json
@@ -9,15 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^18.0.1",
     "@fullstackcraft/react-native-keyboard-shift": "^1.1.5-alpha0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.9",
-    "expo-constants": "~14.2.1",
-    "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
     "jotai": "^2.0.4",
     "react": "18.2.0",
@@ -29,7 +26,8 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "recyclerlistview": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
