--- a/CaietCantari/package.json
+++ b/CaietCantari/package.json
@@ -21,7 +21,8 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "recyclerlistview": "^4.2.0"
+    "recyclerlistview": "^4.2.0",
+    "expo-updates": "~0.16.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
