--- a/CaietCantari/package.json
+++ b/CaietCantari/package.json
@@ -22,7 +22,8 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "recyclerlistview": "^4.2.0",
-    "expo-updates": "~0.16.4"
+    "expo-updates": "~0.16.4",
+    "expo-keep-awake": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
