--- a/CaietCantari/package.json
+++ b/CaietCantari/package.json
@@ -23,7 +23,8 @@
     "react-native-screens": "~3.20.0",
     "recyclerlistview": "^4.2.0",
     "expo-updates": "~0.16.4",
-    "expo-keep-awake": "~12.0.1"
+    "expo-keep-awake": "~12.0.1",
+    "@expo/vector-icons": "^13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
